# Test_Piece_Thickness

./: CMakeLists.txt  README.md  detect2  detect2.cpp  scanNumber.py
src/: detect.cpp  detect2.cpp
